tests/errors/init_state/partial_init/partial_field_write_leaves_root_partial.sim

        struct P { x: i64 y: i64 }
        fn f() {
          p: P;
          q: P;
          entry:
            p.x = 1;
            q = copy p;
            return
        }
        